2006-06-05  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* src/dlvhex/dlvhex.cpp (insertNamespaces), (removeNamespaces),
	(main): Adapted namespace handling to new namestable - strings are now
	stored with their quotes.

	* src/dlvhex/helper.cpp (stringExplode): Do not create a vector
	element if string to explode is empty. This allows for an empty filter
	string to have no effect.


2006-06-04  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/NamesTable.h: Added lookup table to speed up
	name-retrieval.

	* src/dlvhex/Atom.cpp: Improved speed of operator<.

	* src/dlvhex/DLVresultParser.ypp: Removed debug switches.

	* src/dlvhex/Term.cpp (Term): Simplified handling of quoted strings.


2006-05-31  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/Atom.h: Modified the BuiltinPredicate to be closer to
	the parent class Atom.
	* src/dlvhex/Atom.cpp (BuiltinPredicate): Likewise.

	* include/dlvhex/ResultContainer.h: Added workaround to remove DLT
	auxiliary atoms from result.
	* src/dlvhex/ResultContainer.cpp (filterOutDLT): Likewise.
	* src/dlvhex/dlvhex.cpp (main): Likewise.

	Fixes bug: #27


2006-05-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/ProcessBuf.h: New file.
	* src/dlvhex/ProcessBuf.cpp: Likewise.

	* configure.ac: Don't create non-existing examples/Makefile.

	* include/dlvhex/Makefile.am (noinst_HEADERS): Add ProcessBuf.h.

	* src/dlvhex/Makefile.am (libaspsolver_la_SOURCES): Add ProcessBuf.cpp.

	* src/dlvhex/DLVresultParserDriver.cpp: Remove returncode
	parameter.
	* include/dlvhex/DLVresultParserDriver.h: Likewise.

	* src/dlvhex/DLVresultParser.ypp: Remove returncode parameter.
	Allow empty input (-silent).

	* src/dlvhex/ASPsolver.cpp (ASPsolver::callSolver): Outsource fork
	code to ProcessBuf.

	* include/dlvhex/ASPsolver.h (ASPsolver::callSolver): Use a
	reference to const std::string as program parameter.

2006-05-20  Roman Schindlauer  <roman@kr.tuwien.ac.at>
